--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "browser-image-compression": "^2.0.2",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "framer-motion": "^10.11.2",
@@ -29,6 +30,8 @@
     "react-icons": "^4.8.0",
     "react-webcam": "^7.0.1",
     "recoil": "^0.7.7",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   }
